--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
     </div>
     <div class="entire_page">
         <div class="left_side">
-
             <div id="main_card">
                 <div id="header"></div>
                 <div class="card">
                     <img id="profile" src="user-circle.png" alt="profile icon">
-                    <h1>Saeed G</h1>
+                    <h1 id="pro_name">Saeed G</h1>
                     <div id="loc">
                         <img id="marker" src="map-marker.png" alt="map indicator">
                         <h3>Dallas</h3>
@@ -44,29 +43,22 @@
                     </div>
                 </div>
             </div>
-
-
-
             <div id="education">
                 <div id="topbar">
                     <h2>Education</h2>
                 </div>
                 <div id="writing">
                     <h2>Coding Dojo - Full Stack Bootcamp</h2>
-                    <h3 id="secline">Dec 2019 - Mar 2020</h3>
+                    <h3 class="top_request">Dec 2019 - Mar 2020</h3>
                     <h3>Triple black belt in Python, MERN, and C#.. </h3>
                 </div>
             </div>
-
-
-
         </div>
-
         <div class="right_side">
             <div id="connection_req">
                 <div id="top">
                     <button id="plus_button">2</button>
-                    <h2 id="top_request">Connection Requests</h2>
+                    <h2 class="top_request">Connection Requests</h2>
                 </div>
                 <div id="bottom">
                     <div class="conn_req_user">
@@ -86,7 +78,7 @@
             <div id="your_connect">
                 <div id="top2">
                     <button id="plus_button2">500+</button>
-                    <h2 id="top_request2">Your Connections</h2>
+                    <h2 class="top_request">Your Connections</h2>
                 </div>
                 <div id="middle">
                     <div class="user">
@@ -113,5 +105,4 @@
         </div>
     </div>
 </body>
-
 </html>
